CppEditor: Do not remove newlines in "apply signature changes"

Task-number: QTCREATORBUG-31293
Change-Id: I7e145e57a86c5bcb90c8c41fd9794e3c94255b49
Reviewed-by: David Schulz <david.schulz@qt.io>